--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ Released   : 20130425
                                 Get it now on android or iphone!</p>
                         </div>
                     </div> 
-                    <div id="cookie-popup">
+                    <div id="buttons">
                         <div class="hinweis">
-                            <button class="button1">To store</button>
-                            <button class="button2">No thanks</button> 
+                            <button id='button1' class="button1">To store</button>
+                            <button id="button2" class="button2">No thanks</button> 
                         </div>
                     </div>
                 </div>
