--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Released   : 20130425
 
 
             <!-- POPUP -->
-            <!-- Trigger/Open The Modal -->
+            <!-- Trigger and Open The Modal -->
             <div class="button-div">
                 <h1 class="div-text">
                     Latest News!
@@ -59,7 +59,6 @@ Released   : 20130425
                 <!-- Modal content -->
                 <div class="modal-content">
                     <div class="text">
-                            <!-- <span class="close">&times;</span> -->
                         <div class="modal-body">
                             <h2 class="header-text">Hello There!</h2>
                             <p>We started our to do list as an app as well!<br>
@@ -86,15 +85,6 @@ Released   : 20130425
                 </div>
             </div>
 
-            <!-- <div id="cookie-popup">
-                <div class="hinweis">
-                    <span>HELLO THERE!</span>
-                    <p>We started our to do list as an app as well!<br>
-                    Get it now on android or iphone!</p>
-                    <button class="button1">To store</button>
-                    <button class="button2">No thanks</button>
-                </div>
-            </div> -->
             
 
             <!-- TODOLIST -->
